--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 </a>
               </span> -->
                   <span class="link-block">
-                    <a href="https://arxiv.org/abs/2505.13227"
+                    <a href="https://github.com/XinyuanWangCS/OpenCUA-Website/blob/main/static/pdf/AgentNet_Arxiv.pdf"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="ai ai-arxiv"></i>
