--- a/index.html
+++ b/index.html
@@ -737,8 +737,7 @@
           <div class="column is-10">
             <h2 class="title is-3">OpenCUA Models</h2>
             <p>
-              Based on open-sourced Qwen2-VL-7B and Kimi-VL-A3B, we developed our computer-use agent models - <b>OpenCUA-7B</b> and <b>OpenCUA-A3B</b>. 
-              They are built upon AgentNet dataset throught supervised fine-tuning (SFT).
+              We conduct supervised fine-tuning (SFT) on Kimi-VL-A3B, Qwen2-VL-7B, Qwen2.5-VL-7B and Qwen2.5-VL-32B, and obtained our OpenCUA model variants: OPENCUA-A3B, OPENCUA-7B, OPENCUA-2.5-7B, and OPENCUA-2.5-32B.
             <p>
             <br></br>
             <h3 class="title is-4">Computer-Use Showcase</h3>
